--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,13 @@ body {
 
 
 header, footer {
-  background-color: #ffa500;
+  background-color: #457b9d;
   text-align: left;
 /*  min-width: 500px; */
 }
 
 header {
-  font-family: Work Sans;
+  font-family: 'Source Sans Pro', sans-serif;
   color: #fff;
   min-height: 100vh;
   display: flex;
@@ -34,7 +34,7 @@ main {
 }
 
 h1 {
-  font-family: Poppins;
+  font-family: 'Oswald', sans-serif;;
   font-size: calc(1em + 3vw);
   padding-bottom: .67em;
   border-bottom: 1px solid;
@@ -42,12 +42,12 @@ h1 {
 }
 
 h2 {
-  font-family: Poppins;
+  font-family: 'Oswald', sans-serif;;
   font-size: 18px;
   font-weight: 600;
   letter-spacing: 0.3px;
   text-align: left;
-  color: #ffa500;
+  color: #457b9d;
   padding: 10px 0px 10px 10px;
 }
 
@@ -67,7 +67,7 @@ img {
 .bio {
 color: #ffffff;
 font-size: 24px;
-font-family: 'Work Sans';
+font-family: 'Source Sans Pro', sans-serif;
 }
 
 .buttonBox {
@@ -109,6 +109,12 @@ font-family: 'Work Sans';
 
 }
 
+
+
+a {
+  color: #1d3557;
+}
+
 .time {
   padding-left: 10px;
   padding-top: 10px;
@@ -118,7 +124,7 @@ font-family: 'Work Sans';
 
 .mins {
   display: inline-block;
-  font-family: Poppins;
+  font-family: 'Oswald', sans-serif;
   font-size: 14px;
   font-weight: 500;
   letter-spacing: 0.3px;
@@ -129,7 +135,7 @@ font-family: 'Work Sans';
 }
 
 .description {
-  font-family: Work Sans;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 14px;
   font-weight: 300;
   line-height: 1.29;
