--- a/css/style.css
+++ b/css/style.css
@@ -96,18 +96,11 @@ font-family: 'Source Sans Pro', sans-serif;
     top:1px;
 }
 
-.recipe {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.5);
+.project {
+  box-shadow: 0 0px 1px 0 rgb(0 0 0 / 40%);  
   width: 100%;
 }
 
-.a {
-
-}
-
-.c {
-
-}
 
 
 
@@ -115,24 +108,7 @@ a {
   color: #1d3557;
 }
 
-.time {
-  padding-left: 10px;
-  padding-top: 10px;
-  width: 20px;
-  height: auto;
-}
 
-.mins {
-  display: inline-block;
-  font-family: 'Oswald', sans-serif;
-  font-size: 14px;
-  font-weight: 500;
-  letter-spacing: 0.3px;
-  text-align: left;
-  color: #4a4a4a;
-  position: relative;
-  bottom: 5px;
-}
 
 .description {
   font-family: 'Source Sans Pro', sans-serif;
@@ -142,16 +118,9 @@ a {
   letter-spacing: 0.1px;
   text-align: left;
   color: #4a4a4a;
-  padding: 10px 0px 10px 10px;
-  border-top: 1px solid #4a4a4a;
+  padding: 0 20px 20px 20px; 
 }
 
-.logo {
-  width: 115px;
-  height: 21.1px;
-  object-fit: contain;
-  padding: 20px;
-}
 
 .container {
 /*  min-width: 500px; */
